--- a/module3/07_websiste_layout_design/exercise/facebook/style.css
+++ b/module3/07_websiste_layout_design/exercise/facebook/style.css
@@ -3,117 +3,16 @@ body {
     font-size: 0.9em;
 
 }
-header, footer {
-    padding: 10px;
-    color: black;
-    background-color: white;
-    position: fixed;
-    width: 100%;
-
-}
-header{
-    z-index:1;
-    top: 0;
-}
-footer{
-    clear: both;
-    bottom: 0;
-}
-.menu-header{
-    position: relative;
-    display: block;
-    float: left;
-    box-sizing: border-box;
-    margin-top: 5px;
-}
 .logo{
-    width: 4%;
-    height: 50px;
-    border-radius: 50px;
+    font-size: 3rem;
+    color: #0a53be;
 }
-.seach-bar{
-    width: 20%;
-
-}
-.seach-bar input[type=text] {
-    border-radius: 50px;
-    padding: 6px;
-    border: none;
-    font-size: 17px;
-    height: 30px;
-    outline: none;
-    width: 90%;
-    background-color: #F2F2F2;;
-}
-.manipulation-header{
-    width: 50%;
-    height: 40px;
-}
-.m{
-    box-sizing: border-box;
-    height: 100%;
-    width: 20%;
-    text-align: center;
-    padding: 10px;
-    display: inline-block;
-    float: left;
-    border-radius: 10px;
-}
-.setting-header{
-
-    width: calc(26% - 16px);
-    height: 40px;
-    padding-right: 16px;
-    float: right;
-}
-.n{
-    box-sizing: border-box;
-    height: 100%;
-    width: 10%;
-    float: right;
-    margin-right: 5px;
-    text-align: center;
-    padding: 10px;
-    display: inline-block;
-
-    border-radius: 50px;
-    background-color:  #F2F2F2;
-}
-.m:hover{
-    background-color: #F2F2F2;
-}
-.n:hover{
-    background-color: red;
-}
-
 .left{
-    position: fixed;
-    float: left;
-    top: 10%;
-    height: 80%;
-    width: 20%;
-    overflow-y: scroll;
+
 }
 nav{
-
+    padding: 0.5rem;
 }
-
-section {
-    position: relative;
-    box-sizing: border-box;
-    display: inline-block;
-    padding: 10px;
-    background-color: #7dcfb6;
-    width: 60%;
-    left: 20%;
-}
-
-article {
-    margin: 5px;
-    padding: 10px;
-    background-color: #00b2ca;
-}
-
 nav ul {
     padding: 0;
     position: relative;
@@ -122,50 +21,24 @@ nav ul {
 
 nav ul li {
     display: block ;
+
 }
 nav ul li a {
     cursor: pointer;
-    background: #fbd1a2;
     color: black;
     display: inline-block;
+    border-radius:10px ;
     width: 100%;
-    text-align: center;
     padding-block: 10px;
-    
+    padding-left: 20px;
+
 
 }
 nav ul li a:hover {
     cursor: pointer;
-    background:  #325e94;
+    background: #b3b9bf;
     color: white;
 }
 
-.right{
-    top: 10%;
-    position: fixed;
-    float: right;
-    right: 0;
-    height: 80%;
-    width: 20%;
-    overflow-y: scroll;
-}
-aside {
-
-    box-sizing: border-box;
-    padding-left: .5rem;
-    margin-left: .5rem;
-    float: right;
-    box-shadow: inset 5px 0 5px -5px #29627e;
-    font-style: italic;
-    color: #29627e;
-    width: calc(40% - .5rem);
-
-}
-
-aside > p {
-    margin: .5rem;
-}
-
-p {
-    font-family: 'Fira Sans', sans-serif;
+.right {
 }
