--- a/module4/06_JPA/exercise/blog-spring/src/main/resources/templates/blog/index.html
+++ b/module4/06_JPA/exercise/blog-spring/src/main/resources/templates/blog/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <link th:rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.min.css}">
-    <link th:rel="stylesheet" th:href="@{/bootstrap/css/main.css}">
-    <link th:rel="stylesheet" th:href="@{/bootstrap/css/all.css}">
+    <link th:rel="stylesheet" th:href="@{/static/bootstrap/css/bootstrap.min.css}">
+    <link th:rel="stylesheet" th:href="@{/static/bootstrap/css/main.css}">
+    <link th:rel="stylesheet" th:href="@{/static/bootstrap/css/all.css}">
 </head>
 <body>
 <div class="container-fluid mt-100">
@@ -55,6 +55,6 @@
     </div>
 </div>
 </body>
-<script th:src="@{bootstrap/js/main.js}"></script>
-<script th:src="@{bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{../../static/bootstrap/js/main.js}"></script>
+<script th:src="@{../../static/bootstrap/js/bootstrap.min.js}"></script>
 </html>
