--- a/module4/case-study/src/main/resources/templates/customer/customer-list.html
+++ b/module4/case-study/src/main/resources/templates/customer/customer-list.html
@@ -21,10 +21,10 @@
                     </button>
                 </a>
                 <div class="col-lg-4 col-xl-4 col-sm-8 col-md-4 d-none d-md-flex ">
-                    <form action="/customers" class="search-wrap">
-                        <input hidden name="action" value="search">
+                    <form action="/customers/" class="search-wrap">
+
                         <div class="input-group w-100"><input type="text" class="form-control search-form"
-                                                              style="width:55%;" placeholder="Search" name="search">
+                                                              style="width:55%;" placeholder="Search" name="keyword">
                             <div class="input-group-append">
                                 <button class="btn btn-primary search-button" type="submit"><i class="fa fa-search"></i>
                                 </button>
@@ -81,15 +81,10 @@
 
                             <td class="td-actions text-right">
 
-                                <a th:href="@{/customers/{id}(id=${customer.id})}" class="text-light">
-                                    <button type="button" rel="tooltip"
-                                            class="btn btn-info btn-round btn-just-icon btn-sm"
-                                            data-original-title="" title="info"><i
-                                            class="fa fa-user"></i></button>
-                                </a>
 
 
-                                <a th:href="@{/customers/{id}(id=${customer.id})}" class="text-light">
+
+                                <a th:href="@{/customers/edit/{id}(id=${customer.id})}" class="text-light">
                                     <button type="button" rel="tooltip"
                                             class="btn btn-success btn-round btn-just-icon btn-sm"
                                             data-original-title=""
@@ -98,8 +93,9 @@
                                 </a>
 
 
-                                <a data-href="/customers?action=delete&id=${customer.id}"
-                                   data-record-title="${customer.nameCustomer}"
+                                <a
+                                   th:attr="data-href=@{/customers/del/{id}(id=${customer.id})}"
+                                   th:data-record-title="${customer.name}"
                                    data-toggle="modal" data-target="#confirm-delete" class="text-light ">
                                     <button type="button" rel="tooltip"
                                             class="btn btn-danger btn-round btn-just-icon btn-sm" data-original-title=""
@@ -137,10 +133,16 @@
                     </div>
                     </tbody>
                 </table>
+                <div >
+                    <a th:href="@{/customers(page=${customers.number - 1},keyword=${keyword})}" th:if="${customers.hasPrevious()}" th:text="Previous"></a>
+                    <span th:text="${customers.number + 1}" ></span>/<span th:text="${customers.totalPages}"></span>
+                    <a th:href="@{/customers(page=${customers.number +1},keyword=${keyword})}" th:if="${customers.hasNext()}" th:text="Next"></a>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
 </body>
 <script th:replace ="~{/common/header::script}"></script>
 </html>
