--- a/module4/case-study/src/main/resources/templates/common/header.html
+++ b/module4/case-study/src/main/resources/templates/common/header.html
@@ -50,7 +50,7 @@
                                                      data-abc="true" aria-expanded="false">Customer</a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="/customers" data-abc="true">List Customer</a>
-                            <a class="dropdown-item" href="/summary" data-abc="true">Customers are using the
+                            <a class="dropdown-item" href="/customer-view" data-abc="true">Customers are using the
                                 service </a>
                         </div>
                     </li>
