--- a/module4/case-study/src/main/resources/templates/common/index.html
+++ b/module4/case-study/src/main/resources/templates/common/index.html
@@ -78,10 +78,10 @@
         </div>
     </nav>
 </header>
-<!--<c:if test='${message != null&&!err}'>-->
-<!--    <div class="alert alert-success fixed-top col-4" role="alert">-->
-<!--        ${message}-->
-<!--    </div>-->
+
+    <div class="alert alert-success fixed-top col-4" th:if="${message != null}" role="alert">
+        <span th:text="${message}"></span>
+    </div>
 <!--</c:if>-->
 <!--<c:if test='${message != null&&err}'>-->
 <!--    <div class="alert alert-danger fixed-top col-4" role="alert">-->
