--- a/module4/case-study/src/main/resources/templates/contract/contract-list.html
+++ b/module4/case-study/src/main/resources/templates/contract/contract-list.html
@@ -59,7 +59,7 @@
 
                             <td class="text-center" th:text="${contract.endDate}"></td>
                             <td class="text-center" th:text="${contract.deposit}"></td>
-                            <td class="text-center" th:text="${contract.totalMoney}"></td>
+                            <td class="text-center" th:text="${totalMoneys[count.index]}"></td>
 
 
 
