--- a/module5/07_angular_service_router/practice/angular-product-management/src/app/product/product-list/product-list.component.html
+++ b/module5/07_angular_service_router/practice/angular-product-management/src/app/product/product-list/product-list.component.html
@@ -13,6 +13,7 @@
     <td>{{product.price}}</td>
     <td>{{product.description}}</td>
     <td><a routerLink="/product/edit/{{product.id}}">edit</a></td>
+    <td><button (click)="delete(product.id)">delete</button></td>
   </tr>
 </table>
 <router-outlet></router-outlet>
